fix(rule ui): overflow auto

--- a/src/pages/warning/index.less
+++ b/src/pages/warning/index.less
@@ -20,6 +20,7 @@
   flex: 1;
   padding: 10px;
   width: calc(100% - 370px);
+  overflow: auto;
   .strategy-table-title {
     display: flex;
     flex-direction: column;
